2015-03-14  Mike Frysinger  <vapier@gentoo.org>

	* Make-common.in (SIM_RUN_OBJS): Change to nrun.o.
	* run.c [SIM_USE_DEPRECATED_RUN_FRONTEND]: Issue a warning.
	[!SIM_USE_DEPRECATED_RUN_FRONTEND]: Throw an error.

2015-03-14  Mike Frysinger  <vapier@gentoo.org>

	* sim-assert.h [!SIM_ASSERT, WITH_ASSERT]: Include sim-io.h.
	[!ASSERT, WITH_ASSERT]: Likewise.
	* sim-endian.c: Delete sim-io.h include.

2015-02-19  Mike Frysinger  <vapier@gentoo.org>

	* run-sim.h (sim_kill): Delete unused prototype.

2015-02-13  Chen Gang  <gang.chen.5i5j@gmail.com>

	* gentmap.c: Include "string.h".

2015-02-02  Chen Gang  <gang.chen.5i5j@gmail.com>

	* sim-options.c (sim_args_command): Call freeargv() when failure
	occurs.

2015-01-07  Joel Brobecker  <brobecker@adacore.com>

	* aclocal.m4, configure: Regenerate using automake 1.11.1.

2014-12-03  Joel Brobecker  <brobecker@adacore.com>

	* sim-io.c (sim_io_stat, sim_io_fstat): Adjust calls to "stat"
	and "fstat" callbacks by calls to "to_stat" and "to_fstat" (resp)
	callbacks following renaming in callback.h.
	* syscall.c (cb_syscall): Likewise.  Adjust calls to "lstat"
	callback by call to "to_lstat" callback

2014-08-28  Gary Benson  <gbenson@redhat.com>

	* sim-trace.h (debug_printf): New define.

2014-08-19  Alan Modra  <amodra@gmail.com>

	* configure: Regenerate.

2014-08-15  Roland McGrath  <mcgrathr@google.com>

	* configure: Regenerate.
	* config.in: Regenerate.

2014-03-10  Mike Frysinger  <vapier@gentoo.org>

	* sim-command.c (sim_do_command): Add const to cmd.
	* sim-options.c (sim_args_command): Add const to cmd.
	* sim-options.h (sim_args_command): Add const to cmd.

2014-03-05  Mike Frysinger  <vapier@gentoo.org>

	* sim-hload.c (sim_load): Add const to prog.
	* sim-load.c (sim_load_file): Likewise.
	* sim-utils.c (sim_analyze_program): Likewise.
	* sim-utils.h (sim_analyze_program): Likewise.
	(sim_load_file): Likewise.

2014-03-04  Mike Frysinger  <vapier@gentoo.org>
