@@ -1,5 +1,10 @@
 2015-03-14  Mike Frysinger  <vapier@gentoo.org>
 
+	* Make-common.in (BUILT_SRC_FROM_COMMON): Delete.
+	(sim-inline.c): Delete rule.
+
+2015-03-14  Mike Frysinger  <vapier@gentoo.org>
+
 	* Make-common.in (SIM_RUN_OBJS): Change to nrun.o.
 	* run.c [SIM_USE_DEPRECATED_RUN_FRONTEND]: Issue a warning.
 	[!SIM_USE_DEPRECATED_RUN_FRONTEND]: Throw an error.
